bugfix on the case of user has ${} in configuration